fix(css): aligns the entity bio tooltip

--- a/arquivo-web/src/styles/Entity.css
+++ b/arquivo-web/src/styles/Entity.css
@@ -176,6 +176,7 @@
     position: absolute;
     width: 300px;
     background: white;
+    margin-top: 50px;
     padding: 15px;
     border: 1px solid #ddd;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
